DSC-80 footer added

--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
   ],
   "dependencies": {
     "@edx/brand": "npm:@edx/brand-openedx@1.1.0",
-    "@edx/frontend-component-footer": "10.1.6",
     "@edx/frontend-component-header": "2.4.3",
-    "@edx/frontend-platform": "1.12.7",
-    "@edx/paragon": "16.6.1",
+    "@edx/frontend-platform": "^1.15.6",
+    "@edx/paragon": "^19.25.1",
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-brands-svg-icons": "5.15.4",
     "@fortawesome/free-regular-svg-icons": "5.15.4",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "0.1.15",
+    "@woven-dojo/dojo-frontend-common": "^1.1.18",
+    "bootstrap": "4.6.1",
     "classnames": "2.3.1",
     "core-js": "3.18.2",
     "lodash.camelcase": "4.3.0",
@@ -63,7 +64,7 @@
   "devDependencies": {
     "@commitlint/cli": "13.2.1",
     "@commitlint/config-angular": "13.2.0",
-    "@edx/frontend-build": "9.0.5",
+    "@edx/frontend-build": "^12.3.0",
     "codecov": "3.8.3",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.6",
