--- a/.env.development
+++ b/.env.development
@@ -1,24 +1,25 @@
 NODE_ENV='development'
 PORT=1995
 ACCESS_TOKEN_COOKIE_NAME='edx-jwt-cookie-header-payload'
-BASE_URL='localhost:1995'
+PUBLIC_PATH='/profile/'
+BASE_URL='http://dev.dojo.localhost'
+LMS_BASE_URL='http://dev.dojo.localhost'
 CREDENTIALS_BASE_URL='http://localhost:18150'
 CSRF_TOKEN_API_PATH='/csrf/api/v1/token'
 ECOMMERCE_BASE_URL='http://localhost:18130'
 LANGUAGE_PREFERENCE_COOKIE_NAME='openedx-language-preference'
-LMS_BASE_URL='http://localhost:18000'
-LOGIN_URL='http://localhost:18000/login'
-LOGOUT_URL='http://localhost:18000/logout'
-MARKETING_SITE_BASE_URL='http://localhost:18000'
+LOGIN_URL='http://dev.dojo.localhost/login'
+LOGOUT_URL='http://dev.dojo.localhost/logout'
+MARKETING_SITE_BASE_URL='http://dev.dojo.localhost'
 ORDER_HISTORY_URL='http://localhost:1996/orders'
-REFRESH_ACCESS_TOKEN_ENDPOINT='http://localhost:18000/login_refresh'
+REFRESH_ACCESS_TOKEN_ENDPOINT='http://dev.dojo.localhost/login_refresh'
 SEGMENT_KEY=''
 SITE_NAME=localhost
 USER_INFO_COOKIE_NAME='edx-user-info'
-CONTACT_URL='http://localhost:18000/contact'
+CONTACT_URL='http://dev.dojo.localhost/contact'
 ENTERPRISE_LEARNER_PORTAL_HOSTNAME='http://localhost:8080'
-SUPPORT_URL='http://localhost:18000/support'
-TERMS_OF_SERVICE_URL='http://localhost:18000/terms-of-service'
+SUPPORT_URL='http://dev.dojo.localhost/support'
+TERMS_OF_SERVICE_URL='http://dev.dojo.localhost/terms-of-service'
 LOGO_URL=https://edx-cdn.org/v3/default/logo.svg
 LOGO_TRADEMARK_URL=https://edx-cdn.org/v3/default/logo-trademark.svg
 LOGO_WHITE_URL=https://edx-cdn.org/v3/default/logo-white.svg
